# veip-sdk

./: .gitignore  LICENSE  Makefile  README.md  authorize.py  pyproject.toml  state_machine.py  types.py
.github/workflows/: ci.yml
examples/: minimal_demo.py
scripts/: sync_schema_from_veip_spec.sh
tests/: test_replay_validator.py  test_schema_validation.py  test_version_binding.py
veip_sdk/: __init__.py  authorize.py  evidence.py  replay.py  schema.py  state_machine.py
